1.2.4:
- replaced DAS option with auto shift delay/speed options (2022/04/14 MS)
- allow q key for controls (2021/11/05 MS) 

1.2.3:
- simplified cross compiling (2021/04/10 MS)
- added gamepad support (not configurable via menu yet) (2021/04/05 MS)
- show three pieces as preview for modern style (2021/04/03 MS)
- updated some menu hints (2021/04/03 MS)
- added configure option --with-configdir (2021/04/03 MS) 
- added ltris.appdata.xml (2021/04/03 SB)
- show stats only for game modes with one bowl (2021/04/03 MS)

1.2.2:
- don't redraw stack in pause after animation (2020/12/28 MS)
- avoid odd resolutions like 1366x768 (2020/12/28 MS)
- console option for fullscreen (2020/12/28 MS)
- cleaned up configure (2020/12/28 MS)
- improved wall kicks (2020/12/25 MS)
- added lock delay (2020/12/25 MS)
- allow more keys for controls (2020/12/25 MS)
- added hyper DAS option (2020/12/25 MS)

1.2.1:
- fixed build failure with gcc 4.8 (2020/07/27 Fabrice Fontaine)
- added training mode with optional zero gravity (2020/07/01 MS) 

1.2: 
- added classic game style: (2020/06/28 MS) 
  no wall-kicks, random pieces, no shadow piece, ...
- added auto-delay shift (das) and are (entry delay) 
- menu simplified
- code cleanups
- statistics for single player mode
- fixed compiler warnings

1.0.20:
- updated configure.in to configure.ac (2020/06/05 MS)
- added wide screen support (2020/06/05 MS)
- removed all inline keywords to work with GCC 5 (2015/05/16 MS)

1.0.19:
- removed link to lib math as not needed (2013/10/29 MS)
- reset key states when unpausing to prevent unwanted movement (2013/10/29 MS)

1.0.18:
- added vertical delay option (2011/10/29 MS)

1.0.17:
- shift block if rotation would fail because of boundary (2011/08/25 MS)
- allow leaving game over screen by any key not only ESC (2011/08/22 MS)
- made pause key configurable (2011/08/22 MS)

1.0.16:
- improved random number generator (2011/03/02 MS)
- generate pieces according to official Tetris guidelines (2011/03/02 Andrey